clusters/vollminlab-cluster/authentik/authentik/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  namespace: authentik
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    shlink.vollminlab.com/slug: authentik
  labels:
    app: authentik
    env: production
    category: security
spec:
  ingressClassName: nginx
  rules:
    - host: authentik.vollminlab.com
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-proxy
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
  tls:
    - hosts:
        - authentik.vollminlab.com
      secretName: wildcard-tls
